--- a/style.css
+++ b/style.css
@@ -500,7 +500,21 @@ outline: 1px solid black;
 	height: 25px;
 }
 
+.bodyCon{
+	display: flex;
+}
 
+.jsContainer{
+
+	width: 1230px;
+}
+
+.dataCon{
+	width: 1230px;
+	padding: 15px;
+	margin-top: 30px;
+	margin-left: 60px;
+}
 
 
 
