--- a/style.css
+++ b/style.css
@@ -505,20 +505,28 @@ outline: 1px solid black;
 }
 
 .jsContainer{
-
 	width: 1230px;
+	display:flex;
+	flex-wrap: wrap;
 }
 
 .dataCon{
-	width: 1230px;
 	padding: 15px;
 	margin-top: 30px;
 	margin-left: 60px;
 }
 
+.image {
+	width: 250px;
+	height: 250px;
+}
 
-
-
+.title{
+  width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 
 
